# GeCCo-public

./: .gitignore  LICENSE  Makefile.in  README.compile  README.md  aclocal.m4  config.h.in  configure.ac  make.config.in  make.rules.in
FoX-4.1.2/: FoX-config  Makefile  arch.make  configure
baserout/: CONTENTS  Makefile  clean_line.f  cmp2vc.f  cmparr.f  datum.f  diavc.f  diavc2.f  diavc3.f  err_label.f  expgmat.f  factorial.f  find_nmin.f  first_nonblank.f  fndmnx.f  get_genealogical_coeff.f  get_symblk_rank1.f  hostname.f  i4elsqsum.f  i4elsum.f  i8common_entry.f  i8elsum.f  i8list_cmp.f  i8list_ovl.f  i8mat_cmp.f  i8mltlist.f  ibico.f  icp_save.f  idxcount.f  idxlist.f  idxmax.f  ielprd.f  ielsqsum.f  ielsum.f  ifac.f  ifndmax.f  ifndmin.f  imltlist.f  int8_expand.f  int8_pack.f  (+54 more)
cc_spec/: BW_MRCC_Lagrangian.py  CONTENTS  GramSchm_C0_ortho.py  MRCC2.py  MRCC_Lagrangian_coupl_term.py  Makefile  add_cc_default_actions.f  cc_count_terms.f  cc_form_hhat_replace.f  cc_form_post.f  cc_gs_formula.f_  cc_input.f  get_exc_restr.f  icmrcc_ee_targets.py  make_doubly_connected.f  multistate_eff_ham.py  pert_truncation.f  python_start.py  select_mrcc_f12.f  select_mrcc_lag.f  select_mrcc_lag2.f  select_mrcc_lag3.f  select_mrcc_rem0res.f  select_mrcc_trunc.f  select_mrcc_wf.f  select_repl_htt.f  set_cc_exst_targets.f  set_cc_formula.f  set_cc_formula2.f  set_cc_formula_targets.f  set_cc_general_targets.f  set_cc_gsrsp_targets.f  set_cc_hbar.f  set_cc_hbar_formula.f  set_cc_ipst_targets.f  set_cc_lagrangian.f  set_cc_lagrangian2.f  set_cc_me_list_targets.f  set_cc_operator_targets.f  set_cc_operators.f  (+25 more)
config/: acx_blas.m4  i386_apple.conf  i386_linux.conf  ia64_linux.conf  mkdep90.py  unknown.conf  x86_64-linux.conf
contract/: CONTENTS  Makefile  add_1b_op_ham.f  add_op.f  add_opblk.f  add_opblk_transp.f  add_unity.f  add_unity_drv.f  blk_norm_for_list.f  calc_xref.f  check_gm.f  check_ms.f  collect_block.f  collect_block_impr.f  condense_bc_info.f  condense_merge_map.f  contr_blk1blk2_blocked_mm.f  contr_blk1blk2_wmaps_c.f  contr_op1op2.f  contr_op1op2_simple.f  contr_op1op2_wmaps.f  contr_op1op2_wmaps_c.f  copy_mel.f  dealloc_cnt_info.f  dealloc_reo_info.f  dia4op.f  dia4op_ev.f  dia4op_r12.f  dia_from_blk.f  dia_from_op.f  diag_fill.f  diag_guess.f  diagonal.f  dummy_contr.f  dummy_contr2.f  extract_diag_op.f  find_nmin_list.f  frm_sched.f  frm_sched0.f  frm_sched1.f  (+73 more)
crout/: Makefile  atim.c  flush.c  gethostname.c  init_time.c
data/: keyword_registry  keyword_registry.README  keyword_registry.xml  keyword_registry2  keyword_registry3.xml  registry_editor  registry_editor.py
experimental/: .gitignore  CONTENTS  Makefile  arguments_names.txt  exp_wrap.F  gecco_interface.py  rules_names.txt  set_experimental_formula.f  set_experimental_keywords.f  set_experimental_targets.f  set_my_experimental_formula.f.template  set_my_experimental_keywords.f.template  set_my_experimental_targets.f.template
(+1634 files in other folders)
